feat(auth-register): added registration logic and described interaction with global state

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -36,13 +36,17 @@
                 formControlName="password"
               >
             </fieldset><!-- /.form-group -->
-
             <button
               type="submit"
               class="btn btn-lg btn-primary pull-xs-right"
-              [disabled]="registerForm.invalid"
+              [disabled]="registerForm.invalid || (isSubmitting$ | async)"
             >
-              Sign up
+              <span *ngIf="!(isSubmitting$ | async); else loader">Sign up</span>
+              <!-- loader -->
+              <ng-template #loader>
+                <span>Loading...</span>
+              </ng-template>
+              <!-- /loader -->
             </button>
           </fieldset>
         </form>
